--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 .flex-center {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #header {
