--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,10 +1,4 @@
-.menu {
-    width: 250px;
-    
-}
 .content {
-    margin: 0px 20px 0px 250px;
-}
-.header {
-    background: green;
+    margin-left: 200px;
+    margin-right: 30px;
 }
