rewrite create dao

--- a/src/styles/DAOCreator.css
+++ b/src/styles/DAOCreator.css
@@ -1,4 +1,4 @@
-ol.progtrckr {
+/*ol.progtrckr {
     list-style-type: none;
     padding: 0;
   }
@@ -92,4 +92,4 @@ ol.progtrckr {
   
   ol.progtrckr li.progtrckr-done:hover:before {
     color: #333;
-  }
+  }*/
