--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,6 +6,13 @@
     margin-right: 30px;
 }
 
+.delegatee input {
+    border: 0 !important;
+    padding: 0 !important;
+    margin-right: 7px !important;
+    margin-left: 7px !important;
+}
+
 #next-button {
     float: right;
     margin-right: 7%;
@@ -19,4 +26,48 @@
 #create-button {
     float: right;
     margin-right: 7%;
+}
+
+.skeleton {
+    height: 150px; /* change height to see repeat-y behavior */
+
+    background-image:
+        /* radial-gradient( circle 50px at 50px 50px, lightgray 99%, transparent 0 ), */
+        linear-gradient( 100deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80% ),
+        linear-gradient( lightgray 20px, transparent 0 ),
+        linear-gradient( lightgray 20px, transparent 0 ),
+        linear-gradient( lightgray 20px, transparent 0 ),
+        linear-gradient( lightgray 20px, transparent 0 );
+
+    background-repeat: repeat-y;
+
+    background-size:
+        /* 100px 200px, circle */
+        50px 200px, /* highlight */
+        400px 200px,
+        600px 200px,
+        550px 200px,
+        500px 200px;
+
+    background-position:
+        /* 0 0, circle */
+        0 0, /* highlight */
+        0 0,
+        0 40px,
+        0 80px,
+        0 120px;
+
+    animation: shine 1s infinite;
+}
+
+@keyframes shine {
+    to {
+        background-position:
+            /* 0 0, */
+            80% 0, /* move highlight to right */
+            0 0,
+            0 40px,
+            0 80px,
+            0 120px;
+    }
 }
