--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,6 +13,16 @@
     margin-left: 7px !important;
 }
 
+.ui.divider {
+    margin-bottom: 0 !important;
+}
+
+#ipfs-disclaimer {
+    color: #CCCCCC; 
+    font-size: 12px; 
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #next-button {
     float: right;
     margin-right: 7%;
